Released: unreleased

== Features==
 * Updated shipped zlib library to version 1.2.7
 * Synced TortoiseIDiff with TortoiseSVN
 * Synced TortoiseUDiff with TortoiseSVN
 * Fixed issue #1150: Add support for ANSI Color Codes in log Outputs
 * Fixed issue #969: Support for localization (you can download/create language packs for TortoiseGit, see http://code.google.com/p/tortoisegit/wiki/Translation)

== Bug Fix ==
 * Fixed issue #1162: Sync dialog should use same font as progress dialog (use log font for both)
 * Fixed issue #1174: Clone Dialog incorrectly extracts name from URL that contains ".git" in the middle
 * Fixed issue #1184: diff of "Working dir changes" uses incorrect line endings (AutoCrLf=true)

= Release 1.7.9.0 =
Released: 2012-05-05

== Features==
 * Allow to fetch from log dialog
 * Fixed issue #1058: Allow to create tag after commit
 * Fixed issue #101: UTF-8 support
   This makes TortoiseGit msysgit 1.7.10 compatible. If you have non-ascii chars in filenames in your repository you should consider rewriting your history
   (see https://github.com/kblees/git/wiki#wiki-Migrating_old_Git_for_Windows_repositories).
 * Added "prune/cleanup stale remote tracking branches" option to sync dialog

== Bug Fix ==
 * Fixed issue #1123: Apply patch serial does not correctly add patches to list if >3 patches are selected
 * Fixed issue #1061: Enviroment variables ignored: GIT_AUTHOR_NAME and GIT_AUTHOR_EMAIL
 * Fixed issue #1028: overlays with separate-git-dir (e.g. .git\modules\... for submodules) not working
 * Fixed issue #1131: "Whole project" checkbox in commit dialog selects all files
 * Fixed issue #1065: Explorer crashes when rendering a file conflict icon
 * Fixed issue #1027: When post-receive hook contains more than 1 echo bash command, only the LAST echo is displayed in dialog
 * Fixed issue #1136: Proxy password with @ symbol not parsed/saved correctly
 * Fixed issue #1135: branch name does not get updated in show log