@@ -1066,34 +1066,35 @@ BEGIN
     PUSHBUTTON      "Help",IDHELP,239,164,50,14
 END
 
-IDD_NEW_BRANCH_TAG DIALOGEX 0, 0, 296, 212
+IDD_NEW_BRANCH_TAG DIALOGEX 0, 0, 297, 249
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU | WS_THICKFRAME
 CAPTION "New Branch\\Tag"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
-    GROUPBOX        "&Name",IDC_GROUP_BRANCH,7,4,282,31
+    GROUPBOX        "&Name",IDC_GROUP_BRANCH,7,4,283,31
     LTEXT           "Branch:",IDC_LABEL_BRANCH,21,16,33,8
     EDITTEXT        IDC_BRANCH_TAG,57,14,114,14,ES_AUTOHSCROLL
-    GROUPBOX        "Base On",IDC_GROUP_BASEON,7,37,282,75
-    CONTROL         "&HEAD",IDC_RADIO_HEAD,"Button",BS_AUTORADIOBUTTON,20,49,240,10
-    CONTROL         "&Branch",IDC_RADIO_BRANCH,"Button",BS_AUTORADIOBUTTON,19,63,45,10
-    CONTROL         "",IDC_COMBOBOXEX_BRANCH,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,62,183,90
-    PUSHBUTTON      "...",IDC_BUTTON_BROWSE_REF,264,62,14,14
-    CONTROL         "&Tags",IDC_RADIO_TAGS,"Button",BS_AUTORADIOBUTTON,19,78,50,10
-    CONTROL         "",IDC_COMBOBOXEX_TAGS,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,77,183,85
-    CONTROL         "&Version",IDC_RADIO_VERSION,"Button",BS_AUTORADIOBUTTON,19,93,49,10
-    CONTROL         "",IDC_COMBOBOXEX_VERSION,"ComboBoxEx32",CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,93,183,79
-    PUSHBUTTON      "...",IDC_BUTTON_SHOW,264,93,14,14
-    GROUPBOX        "Options",IDC_GROUP_OPTION,7,114,282,29
-    CONTROL         "Trac&k",IDC_CHECK_TRACK,"Button",BS_AUTO3STATE | WS_TABSTOP,23,127,61,10
-    CONTROL         "&Force",IDC_CHECK_FORCE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,127,42,10
-    CONTROL         "&Switch to new branch",IDC_CHECK_SWITCH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,135,127,88,10
-    CONTROL         "&Sign",IDC_CHECK_SIGN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,229,126,43,10
-    GROUPBOX        "&Message",IDC_GROUP_MESSAGE,7,146,282,42
-    EDITTEXT        IDC_EDIT_MESSAGE,21,157,257,23,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN
-    DEFPUSHBUTTON   "OK",IDOK,123,191,50,14
-    PUSHBUTTON      "Cancel",IDCANCEL,181,191,50,14
-    PUSHBUTTON      "Help",IDHELP,239,191,50,14
+    GROUPBOX        "Base On",IDC_GROUP_BASEON,7,37,283,98
+    CONTROL         "New &Root (orphaned)",IDC_RADIO_ORPHANED,"Button",BS_AUTORADIOBUTTON,20,49,240,10
+    CONTROL         "&HEAD",IDC_RADIO_HEAD,"Button",BS_AUTORADIOBUTTON,20,63,240,10
+    CONTROL         "&Branch",IDC_RADIO_BRANCH,"Button",BS_AUTORADIOBUTTON,19,77,45,10
+    CONTROL         "",IDC_COMBOBOXEX_BRANCH,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,76,183,90
+    PUSHBUTTON      "...",IDC_BUTTON_BROWSE_REF,264,76,14,14
+    CONTROL         "&Tags",IDC_RADIO_TAGS,"Button",BS_AUTORADIOBUTTON,19,92,50,10
+    CONTROL         "",IDC_COMBOBOXEX_TAGS,"ComboBoxEx32",CBS_DROPDOWNLIST | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,91,183,85
+    CONTROL         "&Version",IDC_RADIO_VERSION,"Button",BS_AUTORADIOBUTTON,19,107,49,10
+    CONTROL         "",IDC_COMBOBOXEX_VERSION,"ComboBoxEx32",CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP,71,107,183,79
+    PUSHBUTTON      "...",IDC_BUTTON_SHOW,264,107,14,14
+    GROUPBOX        "Options",IDC_GROUP_OPTION,7,139,283,29
+    CONTROL         "Trac&k",IDC_CHECK_TRACK,"Button",BS_AUTO3STATE | WS_TABSTOP,23,152,61,10
+    CONTROL         "&Force",IDC_CHECK_FORCE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,89,152,42,10
+    CONTROL         "&Switch to new branch",IDC_CHECK_SWITCH,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,135,152,88,10
+    CONTROL         "&Sign",IDC_CHECK_SIGN,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,229,151,43,10
+    GROUPBOX        "&Message",IDC_GROUP_MESSAGE,7,171,283,42
+    EDITTEXT        IDC_EDIT_MESSAGE,21,182,257,23,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN
+    DEFPUSHBUTTON   "OK",IDOK,123,228,50,14
+    PUSHBUTTON      "Cancel",IDCANCEL,181,228,50,14
+    PUSHBUTTON      "Help",IDHELP,240,228,50,14
 END
 
 IDD_APPLY_PATCH_LIST DIALOGEX 0, 0, 376, 265
@@ -2064,9 +2065,10 @@ BEGIN
     IDD_NEW_BRANCH_TAG, DIALOG
     BEGIN
         LEFTMARGIN, 7
-        RIGHTMARGIN, 289
+        RIGHTMARGIN, 290
+        VERTGUIDE, 19
         TOPMARGIN, 7
-        BOTTOMMARGIN, 205
+        BOTTOMMARGIN, 242
         HORZGUIDE, 135
     END
 
