@@ -7,6 +7,7 @@ Released: unreleased
  * Synced TortoiseUDiff with TortoiseSVN
  * Fixed issue #1150: Add support for ANSI Color Codes in log Outputs
  * Fixed issue #969: Support for localization (you can download/create language packs for TortoiseGit, see http://code.google.com/p/tortoisegit/wiki/Translation)
+ * Fixed issue #1090: add ability to create an orphan/root branch
 
 == Bug Fix ==
  * Fixed issue #1162: Sync dialog should use same font as progress dialog (use log font for both)
